# gomoku_homework

./: CMakeLists.txt  README.md  plaintext.txt  src
include/: gomoku.hpp
src/: gomoku.cpp  main.cpp
